--- a/src/app/roulette/roulette.component.html
+++ b/src/app/roulette/roulette.component.html
@@ -1,9 +1,19 @@
+<div class="stars">
+<div class="twinkling">
+    <div class="clouds">
 <div class="slot-machine">
-    <button (click)="startSlotMachine()">Start</button>
+    <button ></button>
+    <button (click)="startSlotMachine()">
+        <span>Start!</span>
+        <svg viewBox="-5 -5 110 110" preserveAspectRatio="none" aria-hidden="true">
+          <path d="M0,0 C0,0 100,0 100,0 C100,0 100,100 100,100 C100,100 0,100 0,100 C0,100 0,0 0,0"/>
+        </svg>
+      </button>
     <div class="slot-container">
-      <div class="slot" >
-        <div class="word">{{ getCurrentWord() }}</div>
+        <div class="word">{{getCurrentWord()}}</div>
       </div>
-    </div>
   </div>
+</div>
+</div>
+</div>
   
