--- a/src/app/roulette/roulette.component.css
+++ b/src/app/roulette/roulette.component.css
@@ -64,7 +64,7 @@
     transform: scale(0.95);
   }
   
-  button > svg {
+  :is(button > svg) {
     fill: #950cde;
     position: absolute;
     top: -5%;
@@ -73,15 +73,15 @@
     height: 110%;
   }
   
-  button > svg > path {
+  :is(button > svg > path) {
     transition: var(--motion-duration) var(--motion-ease);
   }
   
-  button:hover > svg > path {
+  :is(button:hover > svg > path) {
     d: path("M0,0 C0,-5 100,-5 100,0 C105,0 105,100 100,100 C100,105 0,105 0,100 C-5,100 -5,0 0,0");
   }
   
-  button:active > svg > path {
+  :is(button:active > svg > path) {
     d: path("M0,0 C30,10 70,10 100,0 C95,30 95,70 100,100 C70,90 30,90 0,100 C5,70 5,30 0,0");
   }
 
